Fixing buttons on iOS

--- a/src/components/Delivery/SearchForm/SearchForm.module.scss
+++ b/src/components/Delivery/SearchForm/SearchForm.module.scss
@@ -26,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
     border: none;
     border-radius: 2px;
     color: $greyColor;
@@ -48,6 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
     border: none;
     border-radius: 2px;
     color: $whiteColor;
@@ -70,6 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
     border: none;
     border-radius: 2px;
     color: $greyColor;
